--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -4,9 +4,9 @@
   "private": true,
   "description": "Next.js frontend for house work scheduler",
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 3002",
     "build": "next build",
-    "start": "next start",
+    "start": "next start -p 3002",
     "lint": "eslint"
   },
   "dependencies": {
