--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,22 @@
 services:
-  # MongoDB Database
-  mongodb:
-    image: mongo:7.0
-    container_name: house-work-mongodb
+  # MySQL Database
+  mysql:
+    image: mysql:8.0
+    container_name: house-work-mysql
     restart: unless-stopped
     environment:
-      MONGO_INITDB_ROOT_USERNAME: admin
-      MONGO_INITDB_ROOT_PASSWORD: password123
-      MONGO_INITDB_DATABASE: house-work-scheduler
+      MYSQL_ROOT_PASSWORD: password123
+      MYSQL_DATABASE: house_work_scheduler
+      MYSQL_USER: housework
+      MYSQL_PASSWORD: housework123
     ports:
-      - "27017:27017"
+      - "3306:3306"
     volumes:
-      - mongodb_data:/data/db
-      - ./mongo-init:/docker-entrypoint-initdb.d
+      - mysql_data:/var/lib/mysql
+      - ./mysql-init:/docker-entrypoint-initdb.d
     networks:
       - house-work-network
+    command: --default-authentication-plugin=mysql_native_password
 
   # Backend API
   backend:
@@ -26,7 +28,11 @@ services:
     restart: unless-stopped
     environment:
       NODE_ENV: production
-      MONGODB_URI: mongodb://admin:password123@mongodb:27017/house-work-scheduler?authSource=admin
+      MYSQL_HOST: mysql
+      MYSQL_PORT: 3306
+      MYSQL_USERNAME: housework
+      MYSQL_PASSWORD: housework123
+      MYSQL_DATABASE: house_work_scheduler
       PORT: 3001
       NOTION_DATABASE_ID: ${NOTION_DATABASE_ID:-}
       NOTION_TOKEN: ${NOTION_TOKEN}
@@ -35,7 +41,7 @@ services:
     ports:
       - "3001:3001"
     depends_on:
-      - mongodb
+      - mysql
     networks:
       - house-work-network
     healthcheck:
@@ -70,7 +76,7 @@ services:
       start_period: 40s
 
 volumes:
-  mongodb_data:
+  mysql_data:
     driver: local
 
 networks:
