--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
       MYSQL_USER: housework
       MYSQL_PASSWORD: housework123
     ports:
-      - "3306:3306"
+      - '3306:3306'
     volumes:
       - mysql_data:/var/lib/mysql
       - ./mysql-init:/docker-entrypoint-initdb.d
@@ -39,13 +39,21 @@ services:
       NOTION_VERSION: ${NOTION_VERSION:-2022-06-28}
       FRONTEND_URL: http://localhost:3002
     ports:
-      - "3001:3001"
+      - '3001:3001'
     depends_on:
       - mysql
     networks:
       - house-work-network
     healthcheck:
-      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:3001/health"]
+      test:
+        [
+          'CMD',
+          'wget',
+          '--no-verbose',
+          '--tries=1',
+          '--spider',
+          'http://localhost:3001/health',
+        ]
       interval: 30s
       timeout: 10s
       retries: 3
@@ -65,13 +73,21 @@ services:
       NODE_ENV: production
       NEXT_PUBLIC_API_URL: ${NEXT_PUBLIC_API_URL}
     ports:
-      - "3002:3002"
+      - '3002:3002'
     depends_on:
       - backend
     networks:
       - house-work-network
     healthcheck:
-      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:3002"]
+      test:
+        [
+          'CMD',
+          'wget',
+          '--no-verbose',
+          '--tries=1',
+          '--spider',
+          'http://localhost:3002',
+        ]
       interval: 30s
       timeout: 10s
       retries: 3
