--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,6 +37,8 @@ services:
       NOTION_DATABASE_ID: ${NOTION_DATABASE_ID:-}
       NOTION_TOKEN: ${NOTION_TOKEN}
       NOTION_VERSION: ${NOTION_VERSION:-2022-06-28}
+      TELEGRAM_BOT_TOKEN: ${TELEGRAM_BOT_TOKEN}
+      TELEGRAM_CHAT_ID: ${TELEGRAM_CHAT_ID}
       FRONTEND_URL: http://localhost:3002
     ports:
       - '3001:3001'
