--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -35,6 +35,7 @@
     "axios": "^1.7.9",
     "mongodb": "^6.3.0",
     "mysql2": "^3.9.2",
+    "node-telegram-bot-api": "^0.66.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "typeorm": "^0.3.21"
